Revision history for Perl extension FSA::Rules.

0.28

0.27  2008-05-02T20:08:40
      - Corrected a number of typos in the POD.
      - Added the "configure_requires" parameter to Build.PL.
      - Added Test::Spelling to the "recommends" parameter to Build.PL and
        updated the test to skip if Test::Spelling is not installed.
      - The output of `stacktrace` now has has keys sorted by
        `$Data::Dumper::Sortkeys = 1`. Not sure how or when this was turned
        off.
      - Added B::Deparse 0.61 to the "recommends" parameter to Build.PL, as
        older versions can cause Storable to croak, since they don't support
        deparsing code references. This fixes things for Perl 5.6.2, where
        serialization is not supported.
      - Requiring Perl 5.6.2 or greater.

0.26  2006-08-29T17:44:37
      - The message() method now takes a list of arguments instead of a single
        scalar. It will concatenate them all together.
      - Fixed bug in strict mode where the machine entered the next state
        before it evaluated all of the rules to ensure that there were not
        multiple destination states. Thanks to Khalil Haddad for sending
        a script that demonstrated the issue (Ticket # 21213).
      - Removed the word "possible" from the exception thrown in strict mode
        where multiple destinations have been found in the rules.

0.25  2006-07-14T18:49:53
      - Reverted "circular reference" change from previous release. It wasn't
        a circular reference after all.
      - Added a "description" attribute for rules.
      - Updated the graph output to output the description of each rule within
        the node, along with the node name.
      - Fixed the "obscure bug" with the 'wrap_nodes' parameter to the graph()
        method so that it no longer breaks graphs.
      - Changed graph tests to use as_canon() instead of as_text(), since
        the latter seems to vary with release of GraphViz.